--- a/assets/css/wc-vendor.css
+++ b/assets/css/wc-vendor.css
@@ -1,13 +1,120 @@
 /*--------------------------------------------------------------
 >>> TABLE OF CONTENTS:
 ----------------------------------------------------------------
+# Global
 # WC Global CSS
 --------------------------------------------------------------*/
 
+/*--------------------------------------------------------------
+# Global
+--------------------------------------------------------------*/
+.wcv-form input[type=color]:focus,
+.wcv-form input[type=date]:focus,
+.wcv-form input[type=datetime-local]:focus,
+.wcv-form input[type=datetime]:focus,
+.wcv-form input[type=email]:focus,
+.wcv-form input[type=month]:focus,
+.wcv-form input[type=number]:focus,
+.wcv-form input[type=password]:focus,
+.wcv-form input[type=search]:focus,
+.wcv-form input[type=tel]:focus,
+.wcv-form input[type=text]:focus,
+.wcv-form input[type=time]:focus,
+.wcv-form input[type=url]:focus,
+.wcv-form input[type=week]:focus,
+.wcv-form select:focus,
+.wcv-form textarea:focus {
+    box-shadow: none !important;
+}
+
+.wcvendors-pro-dashboard-wrapper .wcv-form .control-group .button,
+.wcvendors-pro-dashboard-wrapper .wcv-form .control-group button {
+    font-family: inherit;
+    font-size: inherit;
+    color: #fff;
+    background-color: var(--button-background-color);
+    border-radius: var(--button-border-radius);
+    padding: 10px 20px;
+    font-weight: 500;
+    font-style: normal;
+    text-decoration: none;
+    text-align: center;
+    cursor: pointer;
+    display: inline-block;
+    line-height: 1.3;
+    border: 1px solid var(--button-border-color);
+    outline: 0;
+    vertical-align: middle;
+    -webkit-appearance: none;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-transition: all linear .2s;
+    transition: all linear .2s;
+}
+
+.wcvendors-pro-dashboard-wrapper .wcv-form .control-group .button:hover,
+.wcvendors-pro-dashboard-wrapper .wcv-form .control-group button:hover {
+    color: #fff;
+    background-color: var(--button-background-hover-color);
+    border: 1px solid var(--button-border-hover-color);
+}
+
+.wcv-form .select select {
+    padding: 0 12px;
+}
 
 /*--------------------------------------------------------------
 # WC Global CSS
 --------------------------------------------------------------*/
+
+.wcv-vendor-list-filter.wcv-vendor-list-filter form input[type=text] {
+    padding: 10px 20px;
+    margin-right: 10px;
+}
+
+.wcv-vendor-list-filter.wcv-vendor-list-filter .wcv-vendor-list-switch {
+    border: 1px solid var(--global-border-color);
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    border-radius: 4px;
+}
+
+.wcv-vendor-list-filter .wcv-vendor-list-switch .wcv-vendor-list-switch-item {
+    margin: 0 5px;
+    line-height: 1;
+}
+
+.entry-content .wcv_vendorslist,
+.wcv_vendorslist.grid {
+    margin-left: 0;
+}
+
+.wcv_vendorslist.list .vendor_list,
+.wcv_vendorslist.grid .vendor_list {
+    box-shadow: none;
+}
+
+.wcv_vendorslist .vendor_list .vendor_list--shop-name {
+    min-height: auto;
+}
+
+.vendor-inner-list-wrap .wcv-grid-shop-name {
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: bold;
+    display: inline-block;
+}
+
+.wcv_vendorslist .vendor_list .vendor_list--shop-name a {
+    font-size: inherit;
+    text-decoration: none;
+    color: inherit;
+}
+
+.wcv_vendorslist .vendor_list .vendor_list--shop-name a:hover {
+    color: var(--color-link-active);
+}
 
 .vendor_list {
     position: relative;
@@ -38,8 +145,7 @@
     width: 100%;
 }
 
-.vendor_list a.button {
-    padding: 20px 10px;
+.wcv_vendorslist .vendor_list .vendors_list--shop-link {
     display: block;
 }
 
@@ -157,20 +263,24 @@ table.table-condensed tr:nth-child(even) td {
         margin: 0px;
         padding: 0px;
     }
+
     table td,
     table th {
         display: block;
     }
+
     .table-condensed thead,
     .table thead {
         display: none;
     }
+
     .table-condensed tr,
     .table tr {
         display: block;
         padding-bottom: 10px;
         border-bottom: 1px #eaeaea solid;
     }
+
     .table-condensed td,
     .table td {
         display: block;
@@ -178,6 +288,7 @@ table.table-condensed tr:nth-child(even) td {
         padding-left: 50%;
         border-bottom: 1px #e7e7f5 solid;
     }
+
     .table-condensed td:before,
     .table td:before {
         content: attr(data-attr);
@@ -189,6 +300,7 @@ table.table-condensed tr:nth-child(even) td {
         white-space: nowrap;
         font-weight: bold;
     }
+
     .table-striped td.name,
     .table-striped td.address,
     .table-striped td.city,
@@ -197,6 +309,7 @@ table.table-condensed tr:nth-child(even) td {
         padding-top: 20px;
         padding-bottom: 20px;
     }
+
     .site-wrapper form input[type=date] {
         width: 100%;
         margin-left: 0px;
