--- a/assets/css/editor/editor-styles.css
+++ b/assets/css/editor/editor-styles.css
@@ -18,13 +18,8 @@
 /*--------------------------------------------------------------
 # Imports
 --------------------------------------------------------------*/
-
-@import "../_custom-properties.css";
-@import "../_typography.css";
 @import "../_elements.css";
-@import "../_links.css";
 @import "../_media.css";
-/* @import "../_blocks.css"; */
 @import "../_grid.css";
 
 /*--------------------------------------------------------------
@@ -41,8 +36,6 @@ option {
 }
 
 .editor-post-title__input {
-	/* font-family: var(--highlight-font-family); */
-	/* font-stretch: condensed; */
 	font-size: 2.5rem;
 	line-height: 1.4;
 	margin-top: 0;
@@ -56,12 +49,12 @@ option {
 
 /* Main column width */
 .wp-block {
-	max-width: calc(var(--content-width) + 30px);
+	max-width: calc(45rem + 30px);
 }
 
 /* Width of "wide" blocks */
 .wp-block[data-align="wide"] {
-	max-width: calc(50% + var(--content-width) / 2 + 76px);
+	max-width: calc(50% + 45rem / 2 + 76px);
 }
 
 /* Width of "full-wide" blocks */
