--- a/assets/css/_typography.css
+++ b/assets/css/_typography.css
@@ -32,7 +32,32 @@ h6 {
     margin-top: 0;
     margin-bottom: 1rem;
     color: var(--color-link);
+    line-height: 1.4;
     clear: both;
+}
+
+h1 {
+    font-size: 30px;
+}
+
+h2 {
+    font-size: 24px;
+}
+
+h3 {
+    font-size: 22px;
+}
+
+h4 {
+    font-size: 20px;
+}
+
+h5 {
+    font-size: 18px;
+}
+
+h6 {
+    font-size: 16px;
 }
 
 .entry-header h1.entry-title,
