--- a/assets/css/buddypress.css
+++ b/assets/css/buddypress.css
@@ -43,6 +43,7 @@
     # bbPress(Activity)
     # BuddyPress Follow
     # BuddyPress Resume Manager
+    # BP Attachments
 
 --------------------------------------------------------------*/
 
@@ -5219,4 +5220,218 @@ body.resume.has-single-member-sidebar .site-wrapper.member-home .primary-sidebar
 
 body.resume.has-single-member-sidebar .member-home {
     grid-template-columns: 1fr;
+}
+
+/*--------------------------------------------------------------
+## BP Attachments
+--------------------------------------------------------------*/
+.activity-update-form #whats-new-buttons {
+    margin: 0 15px 0 0;
+    padding: 0;
+}
+
+.activity-update-form #whats-new-buttons .dashicons-admin-media:before {
+    font-family: 'dashicons';
+}
+
+div#bp-attachments-activity-medium-preview {
+    margin: 0;
+    padding: 0.5em;
+    border: 1px solid var(--global-border-color);
+    border-radius: var(--form-border-radius) !important;
+}
+
+div#bp-attachments-activity-medium-preview:empty {
+    padding: 0;
+    border: 0;
+}
+
+div#bp-attachments-activity-medium-preview dl.bp-attachment-meta dd {
+    margin: 0;
+    margin-left: 0.5em;
+}
+
+body.activity.buddypress figure.wp-block-bp-image-attachment img,
+body.activity.buddypress figure.wp-block-bp-image-attachment video {
+    margin-top: 0;
+}
+
+body.activity.buddypress figure a {
+    width: 100%;
+}
+
+body.activity.buddypress figure a img {
+    width: 100%;
+}
+
+body.activity.buddypress figure figcaption {
+    margin: 0.5em 15px;
+}
+
+.wp-block-bp-audio-attachment audio {
+    padding: 0 15px;
+}
+
+body.activity.buddypress div.wp-block-bp-file-attachment {
+    padding: 15px;
+}
+
+body.activity.buddypress div.wp-block-bp-file-attachment .bp-attachments-button,
+#bp-media-library .split-button .split-button-primary,
+#bp-media-library .split-button .split-button-toggle,
+#bp-media-library .split-button .split-button-head a,
+body.personal.attachments #bp-media-library .components-button.is-secondary,
+body.personal.attachments #bp-media-library .components-button.is-tertiary,
+#bp-media-library .media-toolbar-secondary .media-button,
+#bp-media-library .components-button,
+.components-modal__frame .components-button,
+.components-button.is-primary,
+.components-button.is-secondary,
+.components-button.is-tertiary,
+body.personal.attachments #bp-media-library .split-button .split-button-toggle {
+    font-family: inherit;
+    font-size: initial;
+    color: #fff !important;
+    background-color: var(--button_background_color) !important;
+    border-radius: var(--button-border-radius) !important;
+    font-weight: 700;
+    font-style: normal;
+    text-decoration: none;
+    text-align: center;
+    cursor: pointer;
+    display: inline-block;
+    max-height: 100% !important;
+    line-height: 1.3;
+    border: 1px solid var(--button_border_color) !important;
+    outline: 0;
+    vertical-align: middle;
+    -webkit-appearance: none;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-transition: all linear .2s;
+    transition: all linear .2s;
+}
+
+body.activity.buddypress div.wp-block-bp-file-attachment .bp-attachments-button:hover,
+#bp-media-library .split-button .split-button-primary:hover,
+#bp-media-library .split-button .split-button-toggle:hover,
+#bp-media-library .split-button .split-button-head a:hover,
+body.personal.attachments #bp-media-library .components-button.is-secondary:hover,
+body.personal.attachments #bp-media-library .components-button.is-tertiary:hover,
+#bp-media-library .media-toolbar-secondary .media-button:hover,
+#bp-media-library .components-button:hover,
+.components-modal__frame .components-button:hover,
+.components-button.is-primary:hover,
+.components-button.is-secondary:hover,
+.components-button.is-tertiary:hover,
+body.personal.attachments #bp-media-library .split-button .split-button-toggle:hover {
+    background-color: var(--button_background_hover_color) !important;
+    border: 1px solid var(--button_border_hover_color) !important;
+    color: #fff !important;
+}
+
+body.personal.attachments #bp-media-library .wp-filter .view-switch a:before {
+    color: inherit;
+}
+
+body.personal.attachments #bp-media-library .wp-filter .view-switch a.current:before {
+    color: var(--color-theme-primary);
+}
+
+body.personal.attachments #bp-media-library .screen-heading {
+    font-size: 20px;
+    font-weight: 400;
+    margin: auto;
+    margin-right: 10px;
+    padding-bottom: 5px;
+}
+
+body.personal.attachments #bp-media-library .media-toolbar-primary .components-select-control__input { 
+    display: inline-block;
+    font-family: inherit;
+    font-style: inherit;
+    font-size: 15px;
+    width: 100%;
+    height: 35px;
+    outline: none;
+    vertical-align: middle;
+    background-color: #fff;
+    border: 1px solid var(--global-border-color);
+    border-radius: 3px;
+    box-shadow: none;
+    color: inherit;
+}
+
+@media (min-width: 46.8em) {
+    body.personal.attachments #bp-media-library .media-toolbar-primary .components-select-control__input {
+        width: 200px;
+    }
+}
+
+@media (max-width: 480px) {
+    .bp-attachments-media-list .media-items.list .media-item {
+        flex-wrap: wrap;
+    }
+
+    .bp-attachments-media-list .media-items.list .media-item .item-description {
+        flex: 0 0 100%;
+        height: auto;
+    }
+}
+
+#bp-media-library .split-button {
+    top: auto;
+}
+
+#bp-media-library .split-button .split-button-toggle i {
+    padding: 0;
+}
+
+#bp-media-library .split-button .split-button-body li+li {
+    margin-top: 5px;
+}
+
+#bp-media-library .uploader-container.enabled {
+    font-size: 16px;
+    background: rgba(0, 0, 0, .05);
+    border: 1px dashed rgba(0, 0, 0, .2);
+    border-radius: 6px;
+}
+
+.bp-attachments-media-list .media-item {
+    min-width: 100px;
+}
+
+.bp-attachments-media-list .media-item .media-name {
+    font-size: 14px;
+}
+
+@media (max-width: 46.8em) {
+    .bp-attachment-edit-item {
+        flex-wrap: wrap;
+        width: 100%;
+    }
+
+    .bp-attachment-edit-item__preview,
+    .bp-attachment-edit-item__form {
+        width: 100%;
+    }
+}
+
+.bp-attachment-edit-item audio,
+.bp-attachment-edit-item video {
+    width: 100%;
+}
+
+.bp-attachment-edit-item__form-actions button {
+    margin-bottom: 1em;
+}
+
+#bp-media-library .split-button .split-button-toggle {
+    margin-left: 15px;
+    padding: 4px;
+}
+
+.components-form-file-upload .components-button {
+    height: 100%;
 }
