--- a/assets/css/platform.css
+++ b/assets/css/platform.css
@@ -158,9 +158,10 @@ img.emojioneemoji {
 
 .dropzone .dz-default .dz-button::before,
 .dropzone .dz-default .dz-button:hover::before {
-    content: "\e8e3";
+    content: '\ee24';
     font-family: bb-icons;
-    font-size: 18px;
+    font-size: 24px;
+    font-weight: 400;
     height: 54px;
     width: 54px;
     display: inline-block;
@@ -182,7 +183,7 @@ img.emojioneemoji {
 
 .dropzone.media-dropzone .dz-default .dz-button::before,
 .dropzone.media-dropzone .dz-default .dz-button:hover::before {
-    content: "\e9d3";
+    content: '\ee06';
 }
 
 .activity-attached-gif-container,
